add a few certificates

--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
                 <h2>CERTIFICATES</h2>
             </div>
             <div class="certificates-grid">
+                 <div class="certificate-card">
+                    <div class="certificate-image">
+                        <img src="Assets/certi/ap-scholar.jpg" alt="AP SCHOLAR - 2025" class="certificate-img" onclick="openImageModal(this)" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="image-placeholder" style="display:none;">
+                            <span>AP SCHOLAR</span>
+                        </div>
+                    </div>
+                    <div class="certificate-content">
+                        <div class="certificate-number">01</div>
+                        <h3>AP SCHOLAR AWARD</h3>
+                        <p></p>
+                        <div class="certificate-year">2025</div>
+                    </div>
+                </div>
                 <div class="certificate-card">
                     <div class="certificate-image">
                         <img src="Assets/certi/ap-csa.png" alt="ADVANCE PLACEMENT - COMPUTER SCIENCE A" class="certificate-img" onclick="openImageModal(this)" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
@@ -151,7 +165,7 @@
                         </div>
                     </div>
                     <div class="certificate-content">
-                        <div class="certificate-number">01</div>
+                        <div class="certificate-number">02</div>
                         <h3>ADVANCE PLACEMENT - COMPUTER SCIENCE A</h3>
                         <p>Self-study. Scored 4.</p>
                         <div class="certificate-year">2025</div>
@@ -165,7 +179,7 @@
                         </div>
                     </div>
                     <div class="certificate-content">
-                        <div class="certificate-number">01</div>
+                        <div class="certificate-number">03</div>
                         <h3>ADVANCE PLACEMENT - CALCULUS BC</h3>
                         <p>Self-study. Scored 4.</p>
                         <div class="certificate-year">2025</div>
@@ -179,10 +193,52 @@
                         </div>
                     </div>
                     <div class="certificate-content">
-                        <div class="certificate-number">01</div>
+                        <div class="certificate-number">04</div>
                         <h3>ADVANCE PLACEMENT - PHYSICS C: MECHANICS</h3>
                         <p>Self-study. Scored 4.</p>
                         <div class="certificate-year">2025</div>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-image">
+                        <img src="Assets/certi/2024-physicbrawl.jpg" alt="PHYSICS BRAWL" class="certificate-img" onclick="openImageModal(this)" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="image-placeholder" style="display:none;">
+                            <span>PHYSICS BRAWL Participation</span>
+                        </div>
+                    </div>
+                    <div class="certificate-content">
+                        <div class="certificate-number">05</div>
+                        <h3>PHYSICS BRAWL COMPETITION</h3>
+                        <p>Certificate of Participation</p>
+                        <div class="certificate-year">2024</div>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-image">
+                        <img src="Assets/certi/resonance-ttvl-sc.jpg" alt="PROJECT - RESONANCE" class="certificate-img" onclick="openImageModal(this)" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="image-placeholder" style="display:none;">
+                            <span>PROJECT - RESONANCE</span>
+                        </div>
+                    </div>
+                    <div class="certificate-content">
+                        <div class="certificate-number">06</div>
+                        <h3>PROJECT - RESONANCE</h3>
+                        <p>Member of Design and Media</p>
+                        <div class="certificate-year">2024</div>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-image">
+                        <img src="Assets/certi/resonance-ttvl-sc-2.jpg" alt="PROJECT - RESONANCE" class="certificate-img" onclick="openImageModal(this)" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="image-placeholder" style="display:none;">
+                            <span>PROJECT - RESONANCE</span>
+                        </div>
+                    </div>
+                    <div class="certificate-content">
+                        <div class="certificate-number">07</div>
+                        <h3>PROJECT - RESONANCE</h3>
+                        <p>Head of Organizing Commitee</p>
+                        <div class="certificate-year">2024</div>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -193,7 +249,7 @@
                         </div>
                     </div>
                     <div class="certificate-content">
-                        <div class="certificate-number">01</div>
+                        <div class="certificate-number">08</div>
                         <h3>LHP TRADITIONAL GRADUATION EVENT - GIAO 2124</h3>
                         <p>COLLABORATOR - Design & Media Dept.</p>
                         <div class="certificate-year">2024</div>
@@ -207,7 +263,7 @@
                         </div>
                     </div>
                     <div class="certificate-content">
-                        <div class="certificate-number">02</div>
+                        <div class="certificate-number">09</div>
                         <h3>ROBOTRAFFIC COMPETITION</h3>
                         <p>Vietnam Robotraffic Competition - 3rd Place</p>
                         <div class="certificate-year">2024</div>
@@ -221,10 +277,24 @@
                         </div>
                     </div>
                     <div class="certificate-content">
-                        <div class="certificate-number">03</div>
+                        <div class="certificate-number">10</div>
                         <h3>ROBOTRAFFIC COMPETITION</h3>
                         <p>Vietnam Robotraffic Competition - Certificate of Participation</p>
                         <div class="certificate-year">2024</div>
+                    </div>
+                </div>
+                 <div class="certificate-card">
+                    <div class="certificate-image">
+                        <img src="Assets/certi/2023-physicsbrawl.jpg" alt="PHYSICS BRAWL" class="certificate-img" onclick="openImageModal(this)" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="image-placeholder" style="display:none;">
+                            <span>PHYSICS BRAWL Participation</span>
+                        </div>
+                    </div>
+                    <div class="certificate-content">
+                        <div class="certificate-number">11</div>
+                        <h3>PHYSICS BRAWL COMPETITION</h3>
+                        <p>Certificate of Participation</p>
+                        <div class="certificate-year">2023</div>
                     </div>
                 </div>
                
