Update favico Icon to ttvl remove Showcase page because it sucks

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi, I'm Hung </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="myIcon.ico" type="image/x-icon" />
 </head>
 <body class="homepage">
     <div class="container">
@@ -41,9 +42,8 @@
                 </div>
                 <p class="hero-subtitle">PHYSICS STUDENT / VIDEOGRAPHER / EDUCATOR</p>
                 <div class="hero-description">
-                    Exploring the mysteries of physics while capturing life through the lens and sharing knowledge with others.
+                    Just a normal guy who likes physics, videographing, sharing knowledge
                 </div>
-                <a href="showcase.html" class="cta-button">VIEW WORK</a>
             </div>
         </section>
 
