remove showcase page add favico icon for website remove quote section because it seem stupid

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi, I'm Hung </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="myIcon.ico" type="image/x-icon" />
 </head>
 <body class="homepage">
     <div class="container">
@@ -41,9 +42,7 @@
                 </div>
                 <p class="hero-subtitle">PHYSICS STUDENT / VIDEOGRAPHER / EDUCATOR</p>
                 <div class="hero-description">
-                    Exploring the mysteries of physics while capturing life through the lens and sharing knowledge with others.
                 </div>
-                <a href="showcase.html" class="cta-button">VIEW WORK</a>
             </div>
         </section>
 
@@ -111,7 +110,7 @@
             
             <div class="skills-section">
                 <div class="skills-header">
-                    <h3>MY SKILLS</h3>
+                
                 </div>
                 <div class="skills"> 
                     <div class="skill-item">PHYSICS</div>
@@ -119,20 +118,6 @@
                     <div class="skill-item">PHOTOGRAPHY</div>
                     <div class="skill-item">TEACHING</div>
                     <div class="skill-item">CODING</div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Quote Section -->
-        <section id="quote" class="section quote-section">
-            <div class="quote-container">
-                <div class="quote-content">
-                    <div class="quote-mark">"</div>
-                    <blockquote class="quote-text">
-                    We're not good because of what we do <br>
-                    we do good because of who we are.
-                    </blockquote>
-                    <cite class="quote-author">Words I live by (inspired by [Thỏ bảy màu])</cite>
                 </div>
             </div>
         </section>
